[added] New DTO to user requests, UserController and UserUpdate form request and route to make update of a user.
[fixed] Now image service save into method uses encodeByExtension method with extension from the client.
